Fix css bugs with timeline & header blocks on mobile

--- a/themes/dataone/layouts/partials/blocks/card/card.scss
+++ b/themes/dataone/layouts/partials/blocks/card/card.scss
@@ -8,7 +8,7 @@
   width          : 100%;
 
   .pill {
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
 
   &__date {
