--- a/themes/dataone/layouts/partials/blocks/header/header.scss
+++ b/themes/dataone/layouts/partials/blocks/header/header.scss
@@ -43,8 +43,10 @@
     display        : flex;
     flex-direction : row;
     flex-wrap      : wrap;
-    justify-content: left;
-    @include desktop {}
+    justify-content: center;
+    @include desktop {
+      justify-content: left;
+    }
   }
 
   &__title {
