--- a/themes/dataone/layouts/partials/blocks/pill/pill.scss
+++ b/themes/dataone/layouts/partials/blocks/pill/pill.scss
@@ -5,7 +5,7 @@
   font-weight    : 600;
   text-transform : uppercase;
   letter-spacing : .03em;
-  display        : flex;
+  display        : inline-flex;
   align-items    : center;
   justify-content: center;
   border-radius  : 30px;
